[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0"
iced_native = "0.4"
iced = "0.3"
tiny_http = "0.9"
iced_futures = "0.3"
crossbeam = "0.8"
tokio = {version = "1.14", features = ["rt", "macros", "rt-multi-thread"]}