[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0"
iced_native = "0.4"
iced = "0.3"
hyper = {version = "0.14", features = ["http1", "http2", "server", "runtime", "tcp"]}
iced_futures = "0.3"
tokio = {version = "1.14", features = ["rt", "macros", "rt-multi-thread", "sync"]}