[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0"
iced_native = "0.4"
iced = {version = "0.3", features = ["tokio"]}
hyper = {version = "0.14", features = ["http1", "http2", "server", "runtime", "tcp"]}
iced_futures = "0.3"
tokio = {version = "1.14", features = ["rt", "macros", "rt-multi-thread", "sync"]}
hyper-tungstenite = "0.5"
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"